clang/test/BSC/Negative/Ownership/RuleCheck/Maple/status/status.cbs
// RUN: %clang_cc1 -verify %s

#define NULL ((void *)0)

struct A {
    int* owned a;
    int* owned b;
};

int * owned func1(int * owned b) {
    int * owned a = b;
    return a;
}

void func2() {
    int * owned a;
    int * owned b = a; // expected-error {{use of uninitialized value: `a`}}
} // expected-error {{memory leak of value: `b`}}

void func3() {
    struct A * owned a;
    struct A b = *a; // expected-error {{use of uninitialized value: `a`}}
} // expected-error {{field memory leak of value: `b`, b.a, b.b are leak}} expected-error {{memory leak of value: `a`}}

void func4() {
    struct A a;
    int * owned b = a.a; // expected-error {{use of moved value: `a.a`}}
} // expected-error {{memory leak of value: `b`}}

void func12(int * owned a, int * owned b) {
    a = b; // expected-error {{assign to owned value: `a`}}
} // expected-error {{memory leak of value: `a`}}

void func15(int * owned * owned a) {
    int * owned b = *a;
    int * c = (int *)b;
} // expected-error {{memory leak of value: `a`}}

void func16(struct A a) {
    int* b = (int*)a.a;
} // expected-error {{field memory leak of value: `a`, a.b is leak}}

void func17(struct A a) {
    struct A b = a;
} // expected-error {{field memory leak of value: `b`, b.a, b.b are leak}}

void * owned func20(struct A * owned a) {
    int* owned b = a->a;
    int* owned c = a->b;
    return (void * owned)a; // expected-error {{memory leak of value: `c`}} expected-error {{memory leak of value: `b`}}
}

struct B {
    int * owned a;
    int * owned b;
    int * owned c;
};

void func21(struct B a) {
    int* b = (int*)a.a;
    int* c = (int*)a.b;
} // expected-error {{field memory leak of value: `a`, a.c is leak}}

void func22(struct A a) {
    int* b = (int*)a.a;
    a.a = (int * owned)b;
    struct A c = a;
} // expected-error {{field memory leak of value: `c`, c.a, c.b are leak}}

void func23(struct A a) {
    struct A b;
    a = b; // expected-error {{assign to owned value: `a`}} expected-error {{use of partially moved value: `b`, b.a, b.b are moved}}
} // expected-error {{field memory leak of value: `a`, a.a, a.b are leak}}

void func25(int * owned a, int * owned b) {
    int* c = (int*)a;
    a = b;
} // expected-error {{memory leak of value: `a`}}

void func26(struct A a, struct A b) {
    struct A c = a;
    a.a = b.a;
} // expected-error {{field memory leak of value: `c`, c.a, c.b are leak}} expected-error {{field memory leak of value: `a`, a.a is leak}} expected-error {{field memory leak of value: `b`, b.b is leak}}

void func27(struct A a) {
    struct A b = a;
    struct A c = a; // expected-error {{use of partially moved value: `a`, a.a, a.b are moved}}
} // expected-error {{field memory leak of value: `c`, c.a, c.b are leak}} expected-error {{field memory leak of value: `b`, b.a, b.b are leak}}

void func28(struct A a, struct A b) {
    int* owned c = b.a;
    int* owned d = b.b;
    struct A e = a;
    a = b; // expected-error {{use of partially moved value: `b`, b.a, b.b are moved}}
} // expected-error {{field memory leak of value: `e`, e.a, e.b are leak}} expected-error {{memory leak of value: `d`}} expected-error {{memory leak of value: `c`}} expected-error {{field memory leak of value: `a`, a.a, a.b are leak}}

void func29(int * owned * owned a) {
    int * owned c = *a;
    int * owned * owned b;
    a = b; // expected-error {{assign to all moved value: `a`}} expected-error {{use of uninitialized value: `b`}}
} // expected-error {{memory leak of value: `a`}} expected-error {{memory leak of value: `c`}} expected-error {{field memory leak of value: `a`, *a is leak}}

void func31(struct A * owned a) {
    int* b = (int*)a->a;
    int* c = (int*)a->b;
    a->a = (int * owned)b;
} // expected-error {{memory leak of value: `a`}} expected-error {{field memory leak of value: `a`, a.a is leak}}

void func32(int * owned * owned a, int * owned * owned b) {
    int * owned c = *a;
    int * owned * owned e = a; // expected-error {{use of all moved value: `a`}}
} // expected-error {{memory leak of value: `b`}} expected-error {{field memory leak of value: `b`, *b is leak}} expected-error {{memory leak of value: `c`}} expected-error {{memory leak of value: `e`}} expected-error {{field memory leak of value: `e`, *e is leak}}

void * owned func33(int * owned * owned a) {
    int * owned b = *a;
    return (void * owned)a; // expected-error {{memory leak of value: `b`}}
}

void * owned func34(struct A a) {
    int* c = (int*)a.a;
    int* d = (int*)a.b;
    int * owned x = (int * owned)d;
    a.a = x;
} // expected-error {{field memory leak of value: `a`, a.a is leak}}